docs/apache-airflow-providers-amazon/5.0.0/_sources/_api/tests/system/providers/amazon/aws/example_sagemaker_endpoint/index.rst.txt
:py:mod:`tests.system.providers.amazon.aws.example_sagemaker_endpoint`
======================================================================

.. py:module:: tests.system.providers.amazon.aws.example_sagemaker_endpoint


Module Contents
---------------


Functions
~~~~~~~~~

.. autoapisummary::

   tests.system.providers.amazon.aws.example_sagemaker_endpoint.call_endpoint
   tests.system.providers.amazon.aws.example_sagemaker_endpoint.delete_endpoint_config
   tests.system.providers.amazon.aws.example_sagemaker_endpoint.delete_endpoint
   tests.system.providers.amazon.aws.example_sagemaker_endpoint.delete_logs
   tests.system.providers.amazon.aws.example_sagemaker_endpoint.set_up



Attributes
~~~~~~~~~~

.. autoapisummary::

   tests.system.providers.amazon.aws.example_sagemaker_endpoint.DAG_ID
   tests.system.providers.amazon.aws.example_sagemaker_endpoint.ROLE_ARN_KEY
   tests.system.providers.amazon.aws.example_sagemaker_endpoint.KNN_IMAGE_URI_KEY
   tests.system.providers.amazon.aws.example_sagemaker_endpoint.sys_test_context_task
   tests.system.providers.amazon.aws.example_sagemaker_endpoint.TRAIN_DATA
   tests.system.providers.amazon.aws.example_sagemaker_endpoint.SAMPLE_TEST_DATA
   tests.system.providers.amazon.aws.example_sagemaker_endpoint.test_context
   tests.system.providers.amazon.aws.example_sagemaker_endpoint.test_run


.. py:data:: DAG_ID
   :annotation: = example_sagemaker_endpoint

   

.. py:data:: ROLE_ARN_KEY
   :annotation: = ROLE_ARN

   

.. py:data:: KNN_IMAGE_URI_KEY
   :annotation: = KNN_IMAGE_URI

   

.. py:data:: sys_test_context_task
   

   

.. py:data:: TRAIN_DATA
   :annotation: = Multiline-String

    .. raw:: html

        <details><summary>Show Value</summary>

    .. code-block:: text
        :linenos:

        0,4.9,2.5,4.5,1.7
        1,7.0,3.2,4.7,1.4
        0,7.3,2.9,6.3,1.8
        2,5.1,3.5,1.4,0.2


    .. raw:: html

        </details>

   

.. py:data:: SAMPLE_TEST_DATA
   :annotation: = 6.4,3.2,4.5,1.5

   

.. py:function:: call_endpoint(endpoint_name)


.. py:function:: delete_endpoint_config(endpoint_config_job_name)


.. py:function:: delete_endpoint(endpoint_name)


.. py:function:: delete_logs(env_id, endpoint_name)


.. py:function:: set_up(env_id, knn_image_uri, role_arn, ti=None)


.. py:data:: test_context
   

   

.. py:data:: test_run
   

   

